# simble

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .swiftformat  .swiftlint.yml  Brewfile  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Makefile  NOTICE  README.md  SECURITY.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  simble.code-workspace  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-hardware.yml  ci-macos.yml  commitlint.yml  fence.yml  lint.yml  pages.yml  release.yml
.reuse/: dep5
apps/helper/: Package.swift  README.md
apps/helper/Sources/SimBLEHelperKit/: CapabilityToken.swift  HelperState.swift  HelperStatus.swift  InjectionEnv.swift  SocketIO.swift  (+4 more)
assets/: README.md
docs/: development.md
docs/architecture/: README.md  simble-architecture.qd
docs/architecture/decisions/: 0001-simble-bridge-architecture.md  0002-peripheral-role.md  README.md
examples/native/: README.md  project.yml
examples/native/Peripheral/: App.swift  README.md
examples/native/Shared/: README.md
examples/native/Sources/: App.swift  BLEConsole.swift  Brand.swift  CentralView.swift  Components.swift  PeripheralView.swift  README.md  Tabs.swift
examples/native/Watch/: App.swift  README.md
examples/react-native/: README.md
scripts/: build-menubar-app.sh  fence-check.sh  fence-selftest.sh  install.sh  release.sh
tests/: README.md
tools/simblectl/: Package.swift  README.md
(+25 files in other folders)
